--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,13 +86,12 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  min-height: 100vh;
+  background-color: rgb(180, 214, 205, 0.5);
+}
+
+section {
+  padding: 0 1rem;
 }
 
 a {
