--- a/src/views/graphql/Documentation/CustomColorsDocs.css
+++ b/src/views/graphql/Documentation/CustomColorsDocs.css
@@ -1,4 +1,4 @@
-.docsColor{
+.docsColor {
   --color-neutral: 6, 100%, 100%;
   --color-info: 6, 100%, 100%;
   --alpha-secondary: 1;
@@ -13,13 +13,13 @@
   height: 100%;
   top: 0;
   left: -100%;
-  transition: left .2s;
+  transition: left 0.2s;
   z-index: 10;
   -webkit-transform: translateZ(0);
   -webkit-backface-visibility: hidden;
 }
 
-.docsColor.visible{
+.docsColor.visible {
   display: block;
   left: 0%;
 }
