--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,6 +98,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
+li {
+  list-style: none;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
