--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,25 +79,27 @@
   margin: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+li {
+  list-style: none;
 }
 
 @media (prefers-color-scheme: dark) {
